--- a/package.json
+++ b/package.json
@@ -4,8 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "example:server": "node ./example/server.js",
+    "example:client": "node ./example/client.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "delay": "^4.3.0",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1"
+  },
+  "devDependencies": {
+    "cmpp": "git+https://github.com/743v45/node-cmpp-2.git"
+  }
 }
