--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.29.1"
   },
   "devDependencies": {
-    "cmpp": "git+https://github.com/743v45/node-cmpp-2.git"
+    "cmpp": "git+https://github.com/743v45/node-cmpp-2.git",
+    "netmask": "^1.0.6"
   }
 }
